# vehicle-measurement-system

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  compile.sh  oldCMAKE.txt  premake5.lua  pyrightconfig.json
VMS/: .ccls  VMSCamera.py  VMSClient.py  VMSServer.py  VMSlib.py  VmsCamera.py  VmsClient.py  VmsClient_test.py  VmsServer.py  boot.py  camera.py  computer.py  default_config.py  image_handler.py  ledtoggle.py  logger.py  main.cpp  main.py  pico_logger.py  server_run.py  test_VmsCamera.py  wifi.py
VMS/camera/: VmsCamera.py  camera.py  camera_snap.py  pi_camera.py
VMS/include/: Camera.h  Log.h  MQTTHandler.h  VMS.h  VMSPico.h
VMS/scheduler/: task.py
VMS/src/: Camera.cpp  MQTTHandler.cpp  VMS.cpp  main.cpp
VMS/test/: pico_recieve_send_test.py  test_VMSCamera.py  test_VMSClient.py  test_VMSServer.py  test_VmsClient.py  test_VmsServer.py
VMS/test/connectivity/: ftp_test.py  ftp_upload_test.py  micropython-ftplib_test.py  sftp_reciever.py  wifi_test.py
VMS/tests/: camera_test.py  pico_recieve_send_test.py  wifi_test.py
VMS/uart/: data_reciever.py  reciever.py  sender.py
cmake/: build_info.cmake  credentials.cmake  find_opencv.cmake  toolchain.cmake  utils.cmake
lib/mosquitto/: premake5.lua
lib/pico-sdk/: premake5.lua
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_stage2/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/cyw43_driver/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  VMS.cpp  VMS.h  VMSPico.h  Vms.h  vms.cpp
test/: main.c
test/TestBlink/: CMakeLists.txt
test/TestBlink/blink/: CMakeLists.txt  blink.h
test/TestSerial/: CMakeLists.txt
test/TestSerial/serial/: CMakeLists.txt  serial.c
test/blink/: CMakeLists.txt
test/blink/blink/: CMakeLists.txt  blink.c  blink.cpp  copy_blink.c
(+72 files in other folders)
